@@ -2,6 +2,30 @@
 
 Development guide for Claude Code when working with the VectorWave repository.
 
+## Recent Updates (November 2024)
+
+### Foreign Function & Memory API (FFM) Support
+- Added comprehensive FFM implementation in `ai.prophetizo.wavelet.memory.ffm` package
+- Provides zero-copy operations with SIMD-aligned memory
+- Thread-safe memory pooling with automatic cleanup
+- Requires Java 23+ with `--enable-native-access=ALL-UNNAMED` flag
+
+### Known Issues
+1. **CRITICAL: Biorthogonal Wavelets (#138)**
+   - BiorthogonalSpline implementation produces catastrophic reconstruction errors (RMSE > 1.4)
+   - Incorrect filter coefficients and violated perfect reconstruction conditions
+   - Test `FFMWaveletTransformTest.testBiorthogonalWavelets()` is disabled
+   - **Workaround**: Use orthogonal wavelets (Haar, Daubechies, Symlets) instead
+
+2. **Boundary Mode Limitations (#135-137)**
+   - SYMMETRIC and CONSTANT modes not implemented for FFM upsampling operations
+   - Will throw `UnsupportedOperationException` if used
+   - Downsampling operations support all boundary modes
+
+3. **FFM Memory Pool Arena Validation**
+   - Memory segments from different arenas now throw `IllegalArgumentException` instead of silent failure
+   - Helps catch programming errors during development
+
 ## Build Commands
 
 ```bash
@@ -206,3 +230,77 @@ var crashes = analyzer.detectMarketCrashes(priceData, samplingRate);
   - Even-length signals ≥ 256 samples
   - When using AUTO or REAL_OPTIMIZED FFT algorithms
   - Provides significant performance improvements for real signals
+
+
+## Foreign Function & Memory API (FFM)
+
+The `ai.prophetizo.wavelet.memory.ffm` package provides high-performance implementations using Java 23's FFM API:
+
+### Key Components
+- **FFMWaveletTransform**: Drop-in replacement for WaveletTransform with better memory efficiency
+- **FFMMemoryPool**: Thread-safe, SIMD-aligned memory pool
+- **FFMStreamingTransform**: Zero-copy streaming implementation
+- **FFMArrayAllocator**: Low-level memory management utilities
+- **FFMWaveletOps**: Core operations with FFM optimizations
+
+### Usage
+```java
+// Basic usage
+try (FFMWaveletTransform transform = new FFMWaveletTransform(new Haar())) {
+    TransformResult result = transform.forward(signal);
+}
+
+// With configuration
+TransformConfig config = TransformConfig.defaultConfig();
+try (FFMMemoryPool pool = new FFMMemoryPool();
+     FFMWaveletTransform transform = new FFMWaveletTransform(wavelet, BoundaryMode.PERIODIC, pool, config)) {
+    TransformResult result = transform.forward(signal);
+}
+
+// Shared memory pool
+try (FFMMemoryPool pool = new FFMMemoryPool()) {
+    FFMWaveletTransform t1 = new FFMWaveletTransform(wavelet1, pool);
+    FFMWaveletTransform t2 = new FFMWaveletTransform(wavelet2, pool);
+}
+
+// Scoped memory
+double[] result = FFMMemoryPool.withScope(pool -> {
+    FFMWaveletTransform transform = new FFMWaveletTransform(wavelet, pool);
+    return transform.forwardInverse(signal);
+});
+
+// Streaming transforms
+try (FFMStreamingTransform streaming = new FFMStreamingTransform(wavelet, blockSize, overlap)) {
+    streaming.processChunk(data, offset, length);
+    while (streaming.hasCompleteBlock()) {
+        TransformResult result = streaming.getNextResult();
+        // Process result
+    }
+}
+```
+
+### Running with FFM
+```bash
+# Compile with FFM support
+mvn clean compile
+
+# Run with required JVM flags
+java --enable-native-access=ALL-UNNAMED \
+     --add-modules=jdk.incubator.vector \
+     -cp target/classes ai.prophetizo.demo.FFMWaveletDemo
+
+# Run tests with FFM
+mvn test -Djava.args="--enable-native-access=ALL-UNNAMED"
+```
+
+### Performance Benefits
+- 2-4x speedup for large signals (≥4096 samples)
+- 90%+ memory pool hit rate after warm-up
+- Zero GC pressure for off-heap allocations
+- SIMD-aligned memory for optimal vectorization
+
+### Limitations
+- Requires Java 23+
+- Must run with `--enable-native-access=ALL-UNNAMED` flag
+- SYMMETRIC and CONSTANT boundary modes not supported for upsampling
+- Biorthogonal wavelets currently broken (see issue #138)
